Updating menu links

--- a/_data/menu_v2.yml
+++ b/_data/menu_v2.yml
@@ -1,11 +1,11 @@
 AspirePress:
-    Introduction: '/docs/aspirepress/'
+    Introduction: '/'
 
 AspireCloud:
-    Introduction: '/docs/aspirecloud/'
+    Introduction: '/aspirecloud/'
 
 AspireSync:
-    Introduction: '/docs/aspiresync/'
+    Introduction: '/aspiresync/'
 
 AspireUpdate:
-    Introduction: '/docs/aspireupdate/'
+    Introduction: '/aspireupdate/'
