update Gem file for jekyll-mermaid-diagrams

--- a/_data/project.yml
+++ b/_data/project.yml
@@ -1,4 +1,4 @@
-title: "Flysystem"
-tagline: "Many filesystems, one API."
-description: "Filesystem abstraction library for PHP."
+title: "AspirePress"
+tagline: "AspirePress - WordPress for Life"
+description: "AspirePress helps you run WordPress sites independent of the WordPress plugin/theme repository."
 version_v1: 1.1
