--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --config=webpack.config.js",
-        "prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=webpack.config.js"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.2",
-        "clean-webpack-plugin": "^4.0.0",
-        "color": "^4.2.1",
-        "cross-env": "^7.0.3",
-        "css-loader": "^6.6.0",
-        "glob-all": "^3.2.1",
-        "mini-css-extract-plugin": "^2.5.3",
-        "css-minimizer-webpack-plugin": "^3.4.1",
-        "postcss": "^8.4.6",
-        "postcss-import": "^14.0.2",
-        "postcss-loader": "^6.2.1",
-        "purgecss-webpack-plugin": "^4.1.3",
-        "style-loader": "^3.3.1",
-        "tailwindcss": "^3.0.22",
-        "webpack": "^5.68.0",
-        "webpack-cli": "^4.9.2",
-        "webpack-manifest-plugin": "^4.1.1"
-    },
-    "dependencies": {}
+	"private": true,
+	"scripts": {
+		"dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=webpack.config.js",
+		"dev-all": "npm run dev-webpack | bundle exec jekyll serve --port=4001 --livereload",
+		"dev-webpack": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --config=webpack.config.js --watch",
+		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --config=webpack.config.js",
+		"prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=webpack.config.js"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.2",
+		"clean-webpack-plugin": "^4.0.0",
+		"color": "^4.2.1",
+		"cross-env": "^7.0.3",
+		"css-loader": "^6.6.0",
+		"css-minimizer-webpack-plugin": "^3.4.1",
+		"glob-all": "^3.2.1",
+		"mini-css-extract-plugin": "^2.5.3",
+		"postcss": "^8.4.6",
+		"postcss-import": "^14.0.2",
+		"postcss-loader": "^6.2.1",
+		"purgecss-webpack-plugin": "^4.1.3",
+		"style-loader": "^3.3.1",
+		"tailwindcss": "^3.0.22",
+		"webpack": "^5.68.0",
+		"webpack-cli": "^4.9.2",
+		"webpack-manifest-plugin": "^4.1.1"
+	}
 }
